# code

./: .gitignore
aoc/2021/: run.sh  std.hh
aoc/2021/01/: input.txt  main.cc
aoc/2022/: README.md  aoc2022.cabal
aoc/2022/app/: Main.hs
aoc/2022/src/Days/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Day_template.hs
aoc/2022/src/Program/: RunDay.hs
aoc/2022/src/Util/: Parsers.hs  Util.hs
aoc2020/01/: main.adb
design_patterns/builder/: Builder.java  builder.cpp
design_patterns/observer/: Observer.java  observer.cpp  observer.js
design_patterns/singleton/: singleton.cpp  singleton.java
design_patterns/state/: state.cpp
design_patterns/strategy/: strategy.cpp
euler/0001/: main.ml
euler/0002/: main.exs  main.ml
euler/0003/: main.ml
euler/0004/: main.hs  main.ml
golf/prime-numbers/: readme.md
golf/prime-numbers/c/: m1.c  m2.c
golf/prime-numbers/python/: m1.py
languages/cpp/rule_of/: rule_of.cpp
leetcode/problems/0001/: main.py  two_sum.md
leetcode/problems/0002/: add_two_numbers.md
leetcode/problems/0003/: longest_substring_without_repeating_characters.md
leetcode/problems/0004/: main.c  median_of_two_sorted_arrays.md
leetcode/problems/0005/: longest_palindromic_substring.md  main.c
leetcode/problems/0006/: main.erl  main.py
leetcode/problems/0007/: main.c
leetcode/problems/0008/: atoi.md  main.sc
leetcode/problems/0009/: main.sc  palindrom_number.ms
leetcode/problems/0020/: main.sc  valid_parentheses.md
leetcode/problems/0021/: main.sc  merge_two_sorted_lists.md
problems/add_two_numbers/: add_two_numbers.py
problems/longest_substring_without_repeating_characters/: longest_substring_without_repeating_characters.c
problems/two_sum/: two_sum.c
(+12 files in other folders)
